# pycrtm

./: .gitignore  0001-Fix-download-link-for-binary-files.patch  0001-Modifications-for-pygems-pseudodata.patch  CMakeLists.txt  Dockerfile  Get_CRTM_Binary_Files.sh  MANIFEST.in  herbie_config.toml  pyCRTM.py  pycrtm.f90  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
testCases/: test_atms.py
