[project]
name = "pycrtm_jcsda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py (>=3.15.1,<4.0.0)",
    "netcdf4 (>=1.7.3,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
]

[build-system]
requires = [
    "meson",
    "setuptools",
    "wheel",
    "scikit-build",
    "cmake",
    "matplotlib",
    "h5py",
    "netCDF4",
]
build-backend = "setuptools.build_meta"

[tool.poetry]
packages = [
    { include = "pyCRTM.py", to = "pyCRTM" },
    { include = "crtm_io.py", to = "crtm_io" },
]
include = ["pycrtm.f90"]
